1.2.8p26:
    Core & Setup:
    * 5038 FIX: Datasource programs: Prevent zombie processes in case of timeouts...

    Checks & Agents:
    * 5078 FIX: lnx_distro: Detects version and name of Check_MK Appliance correctly
    * 5079 FIX: windows_tasks: Adapted man page; Some OK states were missing
    * 5083 FIX: oracle_locks: Do not discover if data is incomplete...


1.2.8p25:
    Checks & Agents:
    * 4823 FIX: netapp_api_cpu: Fixed crash if data for node is missing...
    * 4874 FIX: cisco_power: Improved discovery of power supplies...
            NOTE: Please refer to the migration notes!
    * 4824 FIX: f5bigip_conns: Fixed crash if Parameters are at 'No Levels'...
    * 4875 FIX: Fixed graph labeling and unit of active HTTP service
    * 4826 FIX: juniper_cpu_util: No crash anymore if information is not provided
    * 4876 FIX: mounts: Fixed wrong handling of NFS mounts on Linux which are detected as stale...
    * 4827 FIX: domino_info: Fixed crash if some information is missing
    * 4908 FIX: enterasys_powersupply: Fixed crash if empty output...
    * 4909 FIX: arris_cmts_cpu: Fixed crash if thresholds are set
    * 4879 FIX: akcp_sensor_humidity, akcp_exp_humidity: Fixed wrong order of level evaluation
    * 4880 FIX: wut_webtherm, wut_webtherm.humidity: Fixed missing device type and enabled performance data for humidity
    * 4881 FIX: multipath: Fixed service details: Number of paths were interpreted as expected paths
    * 4883 FIX: juniper_trpz_aps_sessions: Fixed performance data handling if running on cluster
    * 4884 FIX: oracle_logswitches: Fixed missing oracle.include
    * 4914 FIX: statgrab_mem: Plugin is now prioritized over solaris_mem if both is available...
    * 4915 FIX: solaris_mem: Unified graphs and Per-O-Meter with common memory checks...
    * 4887 FIX: cisco_wlc: Fixed crashing check plugin caused by IndexError
    * 4972 FIX: mk_inventory.aix: Use MK_VARDIR instead of MK_CONFDIR for the state file