@@ -6,6 +6,7 @@
     * 5078 FIX: lnx_distro: Detects version and name of Check_MK Appliance correctly
     * 5079 FIX: windows_tasks: Adapted man page; Some OK states were missing
     * 5083 FIX: oracle_locks: Do not discover if data is incomplete...
+    * 5089 FIX: citrix_xenapp.ps1: Refactored; now uses powershell commands for Citrix environment instead of WMI objects which caused runtime errors
 
 
 1.2.8p25:
